Refactor: 수정 API, Repository, Service